# lidar-cam-fusion-lab

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh  requirements.txt
ros2_ws/src/fusion_ros/: package.xml  setup.py
ros2_ws/src/fusion_ros/fusion_ros/: fusion_node.py
scripts/: demo_projection.py  download_kitti.sh  download_kitti_sample.sh  make_synthetic_frame.py  try_lidar.py  try_projection.py  try_yolo.py
src/fusion_lab/: pyproject.toml
src/fusion_lab/fusion_lab/: __init__.py  association.py  association_utils.py  calibration.py  datasets.py  detection.py  lidar.py  visualization.py
tests/: test_calibration.py
